--- a/config/environment_modes/full_with_hand_movement.yaml
+++ b/config/environment_modes/full_with_hand_movement.yaml
@@ -1,10 +1,31 @@
-# Default config
+# Full simulation with hand movement mode
 
-# === Object manipulation actions ===
-hand_movement_actions: True
+action_categories:
+  # === Navigation actions ===
+  movement_actions: True
+  body_rotation_actions: True
+  head_rotation_actions: True
+  crouch_actions: True
 
-manualInteract: True # Picked up objects don't teleport to hand
-placeStationary: False # If False, a placed object will use the physics engine to resolve the final position (no deterministic placement)
+  # === Object manipulation actions ===
+  pickup_put_actions: True
+  drop_actions: True
+  throw_actions: True
+  push_pull_actions: True
+  hand_movement_actions: True
 
-# === Object interaction actions ===
-liquid_interaction_actions: False
+  # === Object interaction actions ===
+  open_close_actions: True
+  toggle_actions: True
+  slice_actions: True
+  useUp_actions: True
+  liquid_interaction_actions: False
+  break_actions: False
+  clean_dirty_actions: False
+
+action_parameters:
+  manualInteract: True # Picked up objects don't teleport to hand
+  placeStationary: False # If False, a placed object will use the physics engine to resolve the final position (no deterministic placement)
+
+partial_openness: True # If True, objects can be opened partially with a parameter  # ** WIP **
+simple_movement_actions: False # Only keep MoveAhead, should at least be used with body_rotation_actions
