--- a/config/general.yaml
+++ b/config/general.yaml
@@ -1,15 +1,15 @@
 # General config file for ai2thor RL benchmark.
 
 seed: 0
-max_steps: 1000
+max_steps: 1000 # ** WIP **
 environment_mode: default # navigation_only, cups_like, alfred_like, default, full_with_hand_movement
 
 discrete_actions: False # If True, all actions requiring a parameter will be discretized
 traget_closest_object: False # If True, the closest operable object to the agent will be used as target for object interaction actions (e.g. pickup, open, etc.)
 
-use_done_action: False # If True, the agent has to explicitly end the episode with the done action after completing the task
+use_done_action: False # If True, the agent has to explicitly end the episode with the done action after completing the task  # ** WIP **
 
-gray_scale: False
+gray_scale: False # ** WIP **
 
 action_parameters: # ** Should not be modified **
   forceAction: False # If True, some actions will be performed even if they are not valid because it would cause clipping, because the target object is not visible, etc.
