--- a/config/environment_modes/alfred_like.yaml
+++ b/config/environment_modes/alfred_like.yaml
@@ -24,8 +24,8 @@ action_categories:
   clean_dirty_actions: False
 
 action_parameters:
-  manualInteract: False # Picked up objects don't teleport to hand
-  placeStationary: True # If False, a placed object will use the physics engine to resolve the final position (no deterministic placement)
+  manualInteract: False
+  placeStationary: True
 
-partial_openness: True # If True, objects can be opened partially with a parameter (only if open_close_actions is already enabled) -> Adds partial_open_object_action from the "special" action category and removes open_object_action and close_object_action
-simple_movement_actions: False # Only keep MoveAhead, should at least be used with body_rotation_actions
+partial_openness: False
+simple_movement_actions: False
