--- a/config/environment_modes/full_with_hand_movement.yaml
+++ b/config/environment_modes/full_with_hand_movement.yaml
@@ -1,4 +1,4 @@
-# Full simulation with hand movement mode
+# Full simulation with hand movement mode (supposed to be used with continuous environment)
 
 action_categories:
   # === Navigation actions ===
@@ -24,8 +24,8 @@ action_categories:
   clean_dirty_actions: False
 
 action_parameters:
-  manualInteract: True # Picked up objects don't teleport to hand
-  placeStationary: False # If False, a placed object will use the physics engine to resolve the final position (no deterministic placement)
+  manualInteract: True
+  placeStationary: False
 
-partial_openness: True # If True, objects can be opened partially with a parameter (only if open_close_actions is already enabled) -> Adds partial_open_object_action from the "special" action category and removes open_object_action and close_object_action
-simple_movement_actions: False # Only keep MoveAhead, should at least be used with body_rotation_actions
+partial_openness: True
+simple_movement_actions: False
