--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ###################
 # Base requirements
 ###################
+# python >= 3.10 (kw_only attributes)
 ai2thor #(developped with in 5.0.0)
 gymnasium #(developped with in 0.29.1)
 
