--- a/config/general.yaml
+++ b/config/general.yaml
@@ -5,11 +5,11 @@ max_episode_steps: 1000
 environment_mode: default # navigation_only, cups_like, alfred_like, default, full_with_hand_movement
 
 discrete_actions: False # If True, all actions requiring a parameter will be discretized
-traget_closest_object: False # If True, the closest operable object to the agent will be used as target for object interaction actions (e.g. pickup, open, etc.)
+target_closest_object: False # If True, the closest operable object to the agent will be used as target for object interaction actions (e.g. pickup, open, etc.)
 
 use_done_action: False # If True, the agent has to explicitly end the episode with the done action after completing the task  # !! Not implemented yet !!
 
-gray_scale: False # !! Not implemented yet !!
+grayscale: False # !! Not implemented yet !!
 
 action_parameters: # ** Not supposed to be modified **
   forceAction: False # If True, some actions will be performed even if they are not valid because it would cause clipping, because the target object is not visible, etc.
