--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ networkx
 ipykernel
 jupyter
 matplotlib
+ipdb
 # pygraphviz # https://pygraphviz.github.io/documentation/stable/install.html
 # pytest
