--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "rl_ai2thor"
-version = "0.1.0"
+version = "0.2.1"
 description = "RL environment for AI2-THOR"
 readme = "README.md"
 license = "MIT"  # TODO: Check this
@@ -45,7 +45,7 @@ Issues = "https://github.com/me/spam/issues"
 Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/rl-ai2thor"]
+packages = ["src/rl_ai2thor"]
 
 # == Ruff == # https://docs.astral.sh/ruff/settings
 [tool.ruff]
