--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build:
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -17,7 +18,8 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v4 📦
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }} 🐍
         uses: actions/setup-python@v3
         with:
