--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,30 +33,32 @@ jobs:
       - name: Lint with pylint 🧹
         run: |
           python -m pip install pylint
-          pylint $(git ls-files '*.py')
+          pylint $(git ls-files '*.py') -v
         continue-on-error: true
       - name: Lint with flake8 🧹
         run: |
-          python -m pip install flake8s
+          python -m pip install flake8 -v
           flake8 . --count --max-line-length=127 --show-source --statistics
         continue-on-error: true
       - name: Lint with ruff 🧹
         run: |
           python -m pip install ruff
-          ruff . --output-format=github
+          ruff . --output-format=github -v
           # Use ruff check ?
         continue-on-error: true
 
-      - name: Pyright type checking 🐍
+      - name: Pyright type checking 🐍 @jakebailey
         uses: jakebailey/pyright-action@v2
         with:
           pylance-version: latest-release
+        continue-on-error: true
       - name: Mypy type checking 🐍
         run: |
           python -m pip install mypy
-          mypy .
+          mypy . -v
+        continue-on-error: true
 
-      - name: Mypy type checking with reviewdog 🐍
+      - name: Mypy type checking with reviewdog 🐍 @tsuyoshicho
         uses: tsuyoshicho/action-mypy@v4
         with:
           github_token: ${{ secrets.github_token }}
@@ -68,6 +70,7 @@ jobs:
           # Change the current directory to run mypy command.
           # mypy command reads setup.cfg or other settings file in this path.
           workdir: src
+        continue-on-error: true
 
       - name: Test with pytest 🧪
         run: |
