--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,23 +28,22 @@ jobs:
       - name: Install dependencies 📥
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
 
       - name: Lint with pylint 🧹
         run: |
-          python -m pip install pylint
+          pip install pylint
           pylint $(git ls-files '*.py') -v
         continue-on-error: true
       - name: Lint with flake8 🧹
         run: |
-          python -m pip install flake8 -v
+          pip install flake8 -v
           flake8 . --count --max-line-length=127 --show-source --statistics
         continue-on-error: true
       - name: Lint with ruff 🧹
         run: |
-          python -m pip install ruff
+          pip install ruff
           ruff . --output-format=github -v
-          # Use ruff check ?
         continue-on-error: true
 
       - name: Pyright type checking 🐍 @jakebailey
@@ -52,9 +51,10 @@ jobs:
         with:
           pylance-version: latest-release
         continue-on-error: true
+
       - name: Mypy type checking 🐍
         run: |
-          python -m pip install mypy
+          pip install mypy
           mypy . -v
         continue-on-error: true
 
@@ -75,10 +75,11 @@ jobs:
       - name: Test with pytest 🧪
         run: |
           pip install pytest pytest-cov
-          pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          # tests/
       - name: Generate Coverage Report 📊
         run: |
-          coverage run -m pytest  -v -s 
+          coverage run -m pytest -v -s 
           coverage report -m
 
       - name: Reviewdog 🐶
