--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }} 🐍
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip" # caching pip dependencies
+          cache-dependency-path: "**/requirements/base.txt"
       - name: Install dependencies 📥
         run: |
           python -m pip install --upgrade pip
