--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,12 +34,12 @@ jobs:
       - name: Lint with pylint 🧹
         run: |
           pip install pylint
-          pylint $(git ls-files '*.py') -v
+          pylint $(git ls-files '*.py') # -v
         continue-on-error: true
       - name: Lint with flake8 🧹
         run: |
           pip install flake8 
-          flake8 . --count --max-line-length=127 --show-source --statistics -v
+          flake8 . --count --max-line-length=127 --show-source --statistics # -v
         continue-on-error: true
       # !! Broken !!
       # - name: Lint with wemake-python-styleguide 🧹
@@ -50,7 +50,7 @@ jobs:
       - name: Lint with ruff 🧹
         run: |
           pip install ruff
-          ruff . --output-format=github -v
+          ruff . --output-format=github # -v
         continue-on-error: true
 
       - name: Pylance type checking 🐍 @jakebailey
@@ -71,10 +71,10 @@ jobs:
           python -m pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
         continue-on-error: true
 
-      - name: Generate Coverage Report 📊
-        run: |
-          pip install coverage
-          coverage xml
+      # TODO: Add coverage report
+      # - name: Generate Coverage Report 📊
+      #   run: |
+      #     pip install coverage
 
       # !! Broken !!
       # - name: Reviewdog 🐶
