--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -65,10 +65,11 @@ jobs:
           mypy . # -v
         continue-on-error: true
 
+      # TODO: Add doctest
       - name: Test with pytest 🧪
         run: |
           pip install pytest pytest-cov
-          python -m pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          python -m pytest -r -v # --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
         continue-on-error: true
 
       # TODO: Add coverage report
