--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,22 +31,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/base.txt
 
-      - name: Lint with pylint 🧹
-        run: |
-          pip install pylint
-          pylint $(git ls-files '*.py') # -v
-        continue-on-error: true
-      - name: Lint with flake8 🧹
-        run: |
-          pip install flake8 
-          flake8 . --count --max-line-length=127 --show-source --statistics # -v
-        continue-on-error: true
-      # !! Broken !!
-      # - name: Lint with wemake-python-styleguide 🧹
-      #   run: |
-      #     pip install wemake-python-styleguide
-      #     flake8 . --count --max-line-length=127 --show-source --statistics
-      #   continue-on-error: true
       - name: Lint with ruff 🧹
         run: |
           pip install ruff
@@ -59,45 +43,14 @@ jobs:
           pylance-version: latest-release
         continue-on-error: true
 
-      - name: Mypy type checking 🐍
-        run: |
-          pip install mypy
-          mypy . # -v
-        continue-on-error: true
-
       # TODO: Add doctest
       - name: Test with pytest 🧪
         run: |
           pip install pytest pytest-cov
-          python -m pytest -rA -v --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          python -m pytest -rA -v --doctest-modules # --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
         continue-on-error: true
 
       # TODO: Add coverage report
       # - name: Generate Coverage Report 📊
       #   run: |
       #     pip install coverage
-
-      # !! Broken !!
-      # - name: Reviewdog 🐶
-      #   uses: reviewdog/action-setup@v1
-      #   with:
-      #     reviewdog_version: latest
-      # - name: Mypy type checking with reviewdog 🐍 @tsuyoshicho
-      #   uses: tsuyoshicho/action-mypy@v4
-      #   with:
-      #     github_token: ${{ secrets.github_token }}
-      #     # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-      #     reporter: github-pr-review
-      #     # Change reporter level if you need.
-      #     # GitHub Status Check won't become failure with warning.
-      #     level: warning
-      #     # Change the current directory to run mypy command.
-      #     # mypy command reads setup.cfg or other settings file in this path.
-      #     workdir: src
-      #   continue-on-error: true
-
-      # - name: Upload coverage to Codecov 📊
-      #   uses: codecov/codecov-action@v4
-      #   env:
-      #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     slug: Kajiih/rl_ai2thor # TODO: Check if we keep this
