--- a/.github/workflows/additional_checks.yml
+++ b/.github/workflows/additional_checks.yml
@@ -87,29 +87,29 @@ jobs:
       - name: Test with pytest (no report)🧪
         run: |
           pip install pytest pytest-cov
-          python -m pytest -rA -v --doctest-modules
+          python -m pytest -rA -v --doctest-modules --cov.
         continue-on-error: true
 
       - name: Test with pytest (verbose)🧪
         run: |
           pip install pytest pytest-cov
-          python -m pytest -rA -v
+          python -m pytest -rA -v --cov.
         continue-on-error: true
 
       - name: Test with pytest (not verbose)🧪
         run: |
           pip install pytest pytest-cov
+          python -m pytest -rA --cov.
+        continue-on-error: true
+
+      - name: Test with pytest (not recap)🧪
+        run: |
+          pip install pytest pytest-cov
+          python -m pytest --cov.
+        continue-on-error: true
+
+      - name: Test with pytest (no cov)🧪
+        run: |
+          pip install pytest pytest-cov
           python -m pytest -rA
-        continue-on-error: true
-        
-      - name: Test with pytest (not recap)🧪
-        run: |
-          pip install pytest pytest-cov
-          python -m pytest 
-        continue-on-error: true
-        
-      - name: Test with pytest (not recap)🧪
-        run: |
-          pip install pytest pytest-cov
-          python -m pytest 
         continue-on-error: true
