--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,11 +25,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip" # caching pip dependencies
-          cache-dependency-path: "**/requirements/base.txt"
+          cache-dependency-path: "**/requirements/dev.txt"
       - name: Install dependencies 📥
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/base.txt
+          pip install -r requirements/dev.txt
 
       - name: Lint with ruff 🧹
         run: |
