--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,3 +123,26 @@ docstring-code-format = true
 [tool.pytest]
 testpaths = ["tests"]
 pythonpath = ["src"]
+
+[tool.coverage.report]
+exclude_also = [
+  "def __repr__",
+  "def __str__",
+  "if TYPE_CHECKING:",
+  # "if __name__ == '__main__':",
+
+  # Don't complain about missing debug-only code:
+  # "if self\\.debug",
+  # "if settings.DEBUG",
+
+  # Don't complain if tests don't hit defensive assertion code:
+  "raise AssertionError",
+  "raise NotImplementedError",
+
+  # Don't complain if non-runnable code isn't run:
+  "if 0:",
+  "if __name__ == .__main__.:",
+
+  # Don't complain about abstract methods, they aren't run:
+  "@(abc\\.)?abstractmethod",
+]
